--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -6,6 +6,16 @@
           {{.title}}
         </h1>
       </div>
+      <div class="cf mb3">
+    <ul class="list fr tc">
+  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Army</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Air Force</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Navy</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Marines</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Veterans</a></li>
+      
+</ul>
+    </div>
     </div>
   </div>
 </div>
