--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -7,12 +7,12 @@
         </h1>
       </div>
       <div class="cf mb3">
-    <ul class="list fr tc">
-  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Army</a></li>
-  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Air Force</a></li>
-  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Navy</a></li>
-  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Marines</a></li>
-  <li class="dib mr1 mb2"><a href="#" class="f6 f5-ns db br-pill pa2 link dim white">Veterans</a></li>
+    <ul class="list tc">
+  <li class="dib mr1 mb2"><a href="#" class="f6 link dim br-pill ba bw1 ph3 pv2 mb2 dib white">Army</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 link dim br-pill ba bw1 ph3 pv2 mb2 dib white">Air Force</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 link dim br-pill ba bw1 ph3 pv2 mb2 dib white">Navy</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 link dim br-pill ba bw1 ph3 pv2 mb2 dib white">Marines</a></li>
+  <li class="dib mr1 mb2"><a href="#" class="f6 link dim br-pill ba bw1 ph3 pv2 mb2 dib white">Veterans</a></li>
       
 </ul>
     </div>
