--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -6,7 +6,7 @@
 	</a>
 
 	<!-- Primary Nav -->
-	<ul class="flex b grey-3">
+	<ul class="flex grey-3">
 		<li><a href="/contact" class="pa3 no-underline db">Feedback</a></li>
 	</ul>
 
