--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -2,7 +2,7 @@
 
 	<!-- Logo -->
 	<a href="/" class="pa2 db mr4 h-100 w4 flex-none">
-		<img src="/img/militarybucks_logo.png" alt="MilitaryBucks logo" class="br0 db mb0 w-100"/>
+		<img src="/img/militaryhacks_logo.png" alt="MilitaryHacks logo" class="br0 db mb0 w-100"/>
 	</a>
 
 	<!-- Primary Nav -->
