--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,6 +7,7 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex grey-3">
+		<li><a href="https://shop.militaryhacks.com" class="pa3 no-underline db">Guides</a></li>
 		<li><a href="/contact" class="pa3 no-underline db">Feedback</a></li>
 	</ul>
 
