--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -34,7 +34,7 @@
 			</div>
 
 		</div>
-		<p class="i tc">Military Bucks is not a government website and is not affilitated with any branch of the U.S. Military.</p>
+		<p class="i tc">MilitaryHacks.com is not affiliated with the U.S. government or any military branch.</p>
 	</div>
 
 </footer>
