--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,23 +1,21 @@
-<div class="pv5 pv6-l ph3 bg-center cover bg-black" >
+<div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('{{.imageUrl}}')">
   <div class="mw7 center ph3">
     <div class="db mb3">
-      
-	<div class="ph3 mw7 center">
-
-		<div class="flex-l mhn2-l">
-			<div class="w-40-l ph2-l">
-				<h2 class="f2 b lh-title mb2">Discover how to get a promotion without doing hundreds of sit-ups or going back to college!</h2>
-
-				<a href="https://shop.militaryhacks.com" class="btn raise">Learn More</a
-			</div>
-
-			<div class="w-60-l ph2-l">
-				<img src="img/ppw_tablet_preview_01.png" alt="" class="mb3">
-			</div>
-		</div>
-
-	</div>
-</div>
+      <div class="mw7 relative bg-fix-primary mb3">
+        <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary">
+          {{.title}}
+        </h1>
+      </div>
+      <div class="mw7 relative bg-fix-primary mb3">
+        {{ if .subtitle }}
+        <p class="b f4 di lh-title mb3 white mw6">
+          {{.subtitle}}
+        </p>
+        {{ end }}
+      </div>
+      <div class="bg-fix-primary">
+      <a href="/newsletter" class="btn raise">Get the inside scoop!</a>
+    </div>
     </div>
   </div>
 </div>
