--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -5,9 +5,9 @@
 
 		<div class="flex-l mhn2-l">
 			<div class="w-60-l ph2-l">
-				<h2 class="f2 b lh-title mb2">Discover How to Get an Army Promotion Without Doing Hundreds of Sit-Ups or Going Back to College</h2>
+				<h2 class="f2 b lh-title mb2">How to Get an Army Promotion Without Doing Hundreds of Sit-Ups or Going Back to College</h2>
 
-				<a href="#" class="btn raise">Learn More</a>
+				<a href="https://shop.militaryhacks.com/promotion-points-workbook" target="_blank" class="btn raise">Download The Guide</a>
 			</div>
 
 			<div class="w-40-l ph2-l">
