--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,8 +4,8 @@
 
 		<div class="flex-ns justify-between">
 
-			<p class="i tc">MilitaryHacks.com is a privately owned website and is not affiliated with the U.S. government or any military branch.</p>
-
+<span class="i tc" style="font-size:12px">MilitaryHacks.com is a privately owned website and is not affiliated with the U.S. government, DoD or any military branch.</span>
+		
 		</div>
 		
 	</div>
