--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,6 +7,9 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex grey-3">
+		<li><a href="https://www.militaryhacks.com/about" class="pa3 no-underline db">About</a></li>
+		<li><a href="https://www.militaryhacks.com/contact" class="pa3 no-underline db">Contact</a></li>
+		<li><a href="https://www.militaryhacks.com/newsletter" class="pa3 no-underline db">Newsletter</a></li>
 		<li><a href="https://shop.militaryhacks.com" class="pa3 no-underline db">Guides</a></li>
 		
 	</ul>
