--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -21,7 +21,13 @@
 
 {{ partial "blog" . }}
 
-<div class="bg-bluepv4">
+<div class="bg-green fl w-100">
+<div class="ph3 mw7 center">
+	<span class="f6 b lh-title mb2 white">Save 30% on our ASVAB study guide. Use code GET30OFF when you checkout. <a href="#">Details</a>
+</span>
+	</div>
+</div>
+<div class="bg-navy pv4">
 	<div class="ph3 mw7 center">
 
 		<div class="flex-l mhn2-l">
