--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -21,17 +21,17 @@
 
 {{ partial "blog" . }}
 
-<div class="bg-green fl w-100">
+<div class="bg-green fl w-100 pv2 tc">
 <div class="ph3 mw7 center">
 	<span class="f6 b lh-title mb2 white">Save 30% on our ASVAB study guide. Use code GET30OFF when you checkout. <a href="#">Details</a>
 </span>
-	</div>
+</div>
 </div>
 <div class="bg-navy pv4">
 	<div class="ph3 mw7 center">
 
-		<div class="flex-l mhn2-l">
-			<div class="w-100-l ph2-l">
+		<div class="flex mhn2">
+			<div class="w-100 ph2">
 				<h2 class="f2 b lh-title mb2 white">Get paid what you deserve for your military service</h2>
 				
 				<span class="f6 b lh-title mb2 white">Follow our simple 3-step system to six figures and beyond</span>
