--- a/src/css/imports/_colors.css
+++ b/src/css/imports/_colors.css
@@ -72,6 +72,14 @@
   background-color: var(--black);
 }
 
+.bg-green {
+  background-color: var(--green);
+}
+
+.bg-navy {
+  background-color: var(--navy);
+}
+
 .bg-fix-primary {
   padding: 0 var(--spacing-small);
   & :first-child {
