--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -9,6 +9,8 @@
 	--grey-3: rgba(89, 87, 86, 1);
 	--grey-4: rgba(66, 64, 64, 1);
 	--black: rgba(43, 37, 35, 1);
+	--green: rgba(25, 169, 116, 1);
+	--navy: rgba(0, 27, 68, 1);
 
 	/* Typography */
 	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
