--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,14 @@
 {{ define "main" }}
 
+<!-- BEGIN top banner -->
+<div class="bg-green w-100 pv2 tc">
+<div class="ph3 mw7 center">
+	<span class="f6 b lh-title mb2 white">Save 30% on our ASVAB study guide. Use code GET30OFF when you checkout. <a href="#">Details</a>
+</span>
+</div>
+</div>
+<!-- END top banner -->
+<!-- BEGIN hero -->
 <div class="bg-grey-1 pv4">
 	<div class="ph3 mw7 center">
 
@@ -17,16 +26,11 @@
 
 	</div>
 </div>
-
+<!-- END hero -->
 
 {{ partial "blog" . }}
 
-<div class="bg-green w-100 pv2 tc">
-<div class="ph3 mw7 center">
-	<span class="f6 b lh-title mb2 white">Save 30% on our ASVAB study guide. Use code GET30OFF when you checkout. <a href="#">Details</a>
-</span>
-</div>
-</div>
+
 <div class="bg-navy pv4">
 	<div class="ph3 mw7 center">
 
