--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,6 +9,24 @@
 </div>
 <!-- END top banner -->
 <!-- BEGIN hero -->
+<div class="bg-navy pv4 tc">
+	<div class="ph3 mw7 center">
+
+		<div class="flex-l mhn2-l">
+			<div class="w-100-l ph2-l">
+				<h2 class="f2 b lh-title mb2 white">Get paid what you deserve for your military service</h2>
+				
+				<span class="f6 b lh-title mb2 white">Follow our simple 3-step system to six figures and beyond</span>
+
+				<a href="#" target="_blank" class="btn ma2">Get Started</a>
+			</div>
+
+		</div>
+
+	</div>
+</div>
+<!-- END hero -->
+<!-- BEGIN hero -->
 <div class="bg-grey-1 pv4">
 	<div class="ph3 mw7 center">
 
@@ -31,21 +49,5 @@
 {{ partial "blog" . }}
 
 
-<div class="bg-navy pv4">
-	<div class="ph3 mw7 center">
-
-		<div class="flex-l mhn2-l">
-			<div class="w-60-l ph2-l">
-				<h2 class="f2 b lh-title mb2 white">Get paid what you deserve for your military service</h2>
-				
-				<span class="f6 b lh-title mb2 white">Follow our simple 3-step system to six figures and beyond</span>
-
-				<a href="https://shop.militaryhacks.com/promotion-points-workbook" target="_blank" class="btn ma2">Get Started</a>
-			</div>
-
-		</div>
-
-	</div>
-</div>
 
 {{ end }}
