--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -13,10 +13,10 @@
 	<div class="ph3 mw7 center">
 
 		<div class="flex-l mhn2-l">
-			<div class="w-60-l ph2-l">
-				<h2 class="f2 b lh-title mb2 white">Get paid what you deserve for your military service</h2>
+			<div class="w-100-l ph2-l center">
+				<h2 class="f1 b lh-title mb2 white">Get paid what you deserve for your military service</h2>
 				
-				<span class="f6 b lh-title mb2 white">Follow our simple 3-step system to six figures and beyond</span>
+				<span class="f5 lh-title mb2 grey-2">Follow our simple 3-step system to six figures and beyond</span>
 <br>
 				<a href="#" target="_blank" class="btn ma2">Get Started</a>
 			</div>
