--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -6,11 +6,11 @@
 	</a>
 
 	<!-- Primary Nav -->
-	<ul class="flex grey-3">
+	<ul class="flex grey-3 f6">
 		<li><a href="https://www.militaryhacks.com/about" class="pa3 no-underline db">About</a></li>
-		<li><a href="https://www.militaryhacks.com/contact" class="pa3 no-underline db">Contact</a></li>
-		<li><a href="https://www.militaryhacks.com/newsletter" class="pa3 no-underline db">Newsletter</a></li>
 		<li><a href="https://shop.militaryhacks.com" class="pa3 no-underline db">Guides</a></li>
+		<li><a href="https://www.militaryhacks.com/newsletter" class="pa3 no-underline db">Newsletter</a></li>
+		<li><a href="https://www.militaryhacks.com/contact" class="pa3 no-underline db">Contact</a></li>
 		
 	</ul>
 
