--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -3,7 +3,7 @@
 
 
 		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-			{{ range first 2 (where .Data.Pages "Type" "post") }}
+			{{ range first 2 (where .Data.Pages "Type" "blog") }}
 				<div class="ph1-ns w-50-ns flex">
 					{{ .Render "li" }}
 				</div>
@@ -11,7 +11,7 @@
 		</div>
 
 		<div class="tc">
-			<a href="/post" class="btn raise">Read more</a>
+			<a href="/blog" class="btn raise">Read more</a>
 		</div>
 
 	</div>
