--- a/site/layouts/blog/single.html
+++ b/site/layouts/blog/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-  <div class="mw6 center ph3 pv4">
+  <div class="fl mw6 ph3 pv4">
     <h1 class="f2 lh-title b mb3">{{.Title}}</h1>
     <div class="flex justify-between grey-3">
       <p>{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
@@ -11,4 +11,9 @@
       {{ .Content }}
     </div>
   </div>
+
+<div class="fl mw5 ph1 pv4">
+  <p>Subscribe to our newsletter!</p>
+   </div>
+  
 {{ end }}
